service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-health-app
spec:
  type: NodePort
  selector:
    app: django-health-app
  ports:
    - port: 80
      targetPort: 8000 #port on which the application is running
      nodePort: 30007
